@@ -21,7 +21,7 @@ OUTLIB_PATCHLEVEL=0
 
 dnl libsyn123
 SYNAPI_VERSION=1
-SYNLIB_PATCHLEVEL=1
+SYNLIB_PATCHLEVEL=2
 
 dnl Since we want to be backwards compatible, both sides get set to API_VERSION.
 LIBMPG123_VERSION=$API_VERSION:$LIB_PATCHLEVEL:$API_VERSION
